--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   - DB=postgresql
 before_script:
   - cp config/database.travis.yml config/database.yml
-  - psql -c 'create database photo_snap_test;' -U postgres
+  - psql -c 'create database sugarsnap_test;' -U postgres
   - bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare --trace
 script:
