--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ rvm:
   - 2.0.0
 env:
   - DB=postgresql
+before_install:
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+  - "export DISPLAY=:99.0"
+  - "export JASMINE_BROWSER=firefox"
 before_script:
   - cp config/database.travis.yml config/database.yml
   - psql -c 'create database sugarsnap_test;' -U postgres
@@ -11,3 +15,4 @@ before_script:
   - bundle exec rake db:test:prepare --trace
 script:
   - RAILS_ENV=test bundle exec rake spec
+  - bundle exec rake jasmine:ci
