--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_script:
   - bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare --trace
 script:
-  - RAILS_ENV= bundle exec rake spec
+  - RAILS_ENV= bundle exec rspec
