--- a/.travis.yml
+++ b/.travis.yml
@@ -2,28 +2,11 @@ language: ruby
 cache: bundler
 rvm:
   - 2.0.0
-env:
-  - DB=postgresql
 
-# before_script:
-#   - cp config/database.travis.yml config/database.yml
-#   - psql -c 'create database sugarsnap_test;' -U postgres
-#   - bundle exec rake db:migrate --trace
-#   - bundle exec rake db:test:prepare --trace
-script:
-  - RAILS_ENV= bundle exec rake spec
-env:
-  - DB=postgresql
-  - BUNDLE_ARCHIVE="test-bundle"
-  - AWS_S3_BUCKET="travisci-bundler-cache"
-  - RAILS_ENV=test
-
-before_install:
-- 'echo ''gem: --no-ri --no-rdoc'' > ~/.gemrc'
-- gem install bundler bundle_cache
-- bundle_cache_install
 before_script:
-- cp config/database.travis.yml config/database.yml
-- bundle exec rake db:create db:migrate db:schema:load
-after_script:
-- bundle_cache
+  - cp config/database.travis.yml config/database.yml
+  - psql -c 'create database sugarsnap_test;' -U postgres
+  - bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare --trace
+script:
+  - RAILS_ENV=test bundle exec rake spec
